--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <option value="platB">D9810AH</option>
                 <option value="platC">D9532AH</option>
                 <option value="platD">D9121FG</option>
+                <option value="platE">D9157FG</option>
             </select>
 
             <div class="data-display" id="data1Display"></div>
