--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <option value="platC">D9532AH</option>
                 <option value="platD">D9121FG</option>
                 <option value="platE">D9157FG</option>
+                <option value="platF">D9327AJ</option>
             </select>
 
             <div class="data-display" id="data1Display"></div>
